--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "screenfull": "^5.1.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
